<resources>
    <string name="app_name">Kiwi</string>
    <string name="title_my_events">My Events</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_login">Login</string>
    <string name="title_event_creation">Create Event</string>


<!--fragment_event_description.xml-->
    <string name="description_event_title">Event Name: </string>
    <string name="description_host_text">Hosted By: </string>
    <string name="description_date_text">Date: </string>
    <string name="description_description_text">Description: </string>
    <string name="description_update_text">Updates: </string>
    <string name="description_location_text">Location: </string>
    <string name="description_time_text">Time: </string>
    <string name="description_follow_event_button">Follow</string>
    <string name="description_unfollow_event_button">Unfollow</string>
    <string name="update_text">Provide an update for the event...</string>

<!--Events List-->
    <string name="title_events_list">View Events </string>

<!--My Events-->
    <string name="my_upcoming_events">My Upcoming Events</string>
    <string name="my_hosted_events">My Hosted Events</string>
    <string name="empty_my_upcoming_events">Find and follow an event and it will show up here!</string>
    <string name="empty_my_hosted_event">Create a new event and it will show up here!</string>

<!--Event Creation and Compound Event-->
    <string name="event_name">Event Name: </string>
    <string name="event_creation_datentime">Date and Time: </string>
    <string name="event_location">Location: </string>
    <string name="event_date">Date: </string>
    <string name="event_time">Time: </string>
    <string name="event_description">Description: </string>

    <string name="event_creation_success">Successfully Created Event</string>
    <string name="event_creation_fail">Please fill all required fields</string>
    <string name="login_error">The app does not detect you are logged in. Please try again.</string>
</resources>