<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.ucsb.cs.cs184.group2.kiwi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events_list"
        android:name="edu.ucsb.cs.cs184.group2.kiwi.ui.eventsList.EventsListFragment"
        android:label="@string/title_events_list"
        tools:layout="@layout/fragment_events_list" >
        <action
            android:id="@+id/action_navigation_events_list_to_navigation_events_description"
            app:destination="@id/navigation_event_description" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event_description"
        android:name="edu.ucsb.cs.cs184.group2.kiwi.ui.eventDescription.EventDescriptionFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_event_description">
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="edu.ucsb.cs.cs184.group2.kiwi.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_event_creation"
        android:name="edu.ucsb.cs.cs184.group2.kiwi.ui.eventCreation.EventCreationFragment"
        android:label="@string/title_event_creation"
        tools:layout="@layout/fragment_event_creation" />
</navigation>